--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "typescript": "^5.7.2",
     "nx": "^20.3.0",
     "prompt-sync": "^4.2.0",
     "ts-node": "^10.9.2"
+  },
+  "devDependencies": {
+    "typescript": "^5.7.2"
   }
 }
