--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "build": "tsc",
-    "start": "node dist/src/index.js"
+    "build": "tsc"
   },
   "keywords": [],
   "author": "",
