--- a/tsconfig.json
+++ b/tsconfig.json
@@ -112,5 +112,6 @@
     "skipLibCheck": true /* Skip type checking all .d.ts files. */
   },
   "include": ["src/**/*.ts"],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules"],
+  "types": ["node"]
 }
