--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "ts-node": "^10.9.2"
   },
   "devDependencies": {
+    "@types/node": "^22.10.2",
     "dotenv": "^16.4.7",
     "typescript": "^5.7.2"
   }
